v1.19.1/envoy/envoy-per-route.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/limited"
                          route:
                            cluster: web_service
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                              type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              value:
                                stat_prefix: http_local_rate_limiter_hello_world
                                # 10 req/min
                                token_bucket:
                                  max_tokens: 10
                                  tokens_per_fill: 10
                                  fill_interval: 60s
                                filter_enabled:
                                  runtime_key: local_rate_limit_enabled
                                  default_value:
                                    numerator: 100
                                    denominator: HUNDRED
                                filter_enforced:
                                  runtime_key: local_rate_limit_enforced
                                  default_value:
                                    numerator: 100
                                    denominator: HUNDRED
                                response_headers_to_add:
                                  - append: false
                                    header:
                                      key: x-local-rate-limit
                                      value: "true"
                        - match:
                            prefix: "/"
                          route:
                            cluster: web_service
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      value:
                        stat_prefix: http_local_rate_limiter
                  - name: envoy.filters.http.router

  clusters:
    - name: web_service
      type: STRICT_DNS # static
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: web_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: web_service
                      port_value: 80
